--- a/pom.xml
+++ b/pom.xml
@@ -49,4 +49,17 @@
             </plugin>
         </plugins>
     </build>
+	   <!-- Distribution Management for deploying artifacts -->
+    <distributionManagement>
+        <snapshotRepository>
+            <id>nexusRepo</id>
+            <url>http://13.232.6.56:8081/repository/sample-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>nexusRepo</id>
+            <url>http://13.232.6.56:8081/repository/sample-releases/</url>
+        </repository>
+    </distributionManagement>
+</project>
+
 </project>
